virtualservice/grafana-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: grafana-monitoring
  namespace: monitoring
  labels:
    app: grafana
    component: monitoring
spec:
  gateways:
    - knative-serving/knative-ingress-gateway
  hosts:
    - monitoring.rc.ds.wt.de
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: grafana.monitoring.svc.cluster.local
            port:
              number: 80
          weight: 100
